@@ -63,10 +63,10 @@ Role: The main view of the extension with separated slot/widget systems
                 <div id="homepage" class="page">
 
                     <!-- Pinned URLs Section -->
-                    <div class="slot-wrapper">
-                        <div class="shortcuts-container slot-container">
-                            <div class="slot-controls" id="shortcuts-controls">
-                                <span class="slot-btn" id="add-shortcut-btn">
+                    <div class="shortcuts-wrapper">
+                        <div class="shortcuts-container">
+                            <div class="shortcuts-controls">
+                                <span class="shortcuts-btn" id="add-shortcut-btn">
                                     <svg width="16" height="16">
                                         <use href="#add-icon" />
                                     </svg>
@@ -78,9 +78,9 @@ Role: The main view of the extension with separated slot/widget systems
 
                     <!-- Widgets Section -->
                     <div class="slot-wrapper">
-                        <div class="widgets-container slot-container">
-                            <div class="slot-controls" id="widgets-controls">
-                                <span class="slot-btn" id="add-widget-btn">
+                        <div class="slot-container">
+                            <div class="slot-controls">
+                                <span class="widget-btn" id="add-widget-btn">
                                 <svg width="16" height="16">
                                     <use href="#add-icon" />
                                 </svg>
@@ -89,6 +89,8 @@ Role: The main view of the extension with separated slot/widget systems
                             <!-- Widget slots will be dynamically generated here -->
                         </div>
                     </div>
+
+
                 </div>
 
                 <div class="page" id="bookmarks">
