@@ -20,25 +20,6 @@ Role: Pinned URLs shortcuts styles
 }
 
 /* –––––––––––––––––––––––––––
-  SLOT CONTROLS
-––––––––––––––––––––––––––– */
-
-.shortcuts-controls {
-  position: absolute;
-  top: 14px;
-  right: 14px;
-  display: flex;
-  flex-direction: row;
-  gap: 16px;
-  visibility: hidden;
-  fill: var(--content-bright-30);
-}
-
-.shortcuts-controls:hover svg {
-  fill: var(--content-bright-100);
-}
-
-/* –––––––––––––––––––––––––––
   SHORTCUT ITEMS
 ––––––––––––––––––––––––––– */
 
