@@ -39,6 +39,8 @@ Role: Core slot system styles (layout, drag/drop, animations)
 .slot {
   display: flex;
   border-radius: 8px;
+  width: 100px;
+  height: 100px;
   transition: background-color 0.3s, border-color 0.3s;  
   justify-content: center;
   align-items: center;
@@ -53,6 +55,7 @@ Role: Core slot system styles (layout, drag/drop, animations)
   background-color: var(--container-bright-30);
 }
 
+/* Slot states for drag and drop */
 .slot.drop-active {
   border-color: var(--content-bright-80);
 }
@@ -70,7 +73,6 @@ Role: Core slot system styles (layout, drag/drop, animations)
   background-color: var(--container-bright-20);
   border-style: solid;
 }
-
 /* –––––––––––––––––––––––––––
   SLOT CONTROLS
 ––––––––––––––––––––––––––– */
@@ -90,11 +92,126 @@ Role: Core slot system styles (layout, drag/drop, animations)
   fill: var(--content-bright-100);
 }
 
-.slot-btn {
-  color: var(--content-bright-30);
-  cursor: pointer;
+/* –––––––––––––––––––––––––––
+  CORE ITEM STYLES
+––––––––––––––––––––––––––– */
+
+.widget {
+  background-color: var(--container-bright-30);
+  border-radius: 6px;
+  padding: 15px;
+  width: calc(100% - 30px);
+  height: calc(100% - 30px);
+  cursor: default;
+  user-select: none;
+  touch-action: none;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  transition: transform 0.1s, box-shadow 0.3s;
 }
 
-.slot-btn:hover {
-  color: var(--content-bright-100);
+.widget:hover .widget-controls {
+  display: flex;
+}
+
+.widget.dragging {
+  opacity: 0.8;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+}
+
+.widget.swap-target {
+  outline: 2px dashed var(--content-bright-80);
+  outline-offset: 2px;
+}
+
+/* –––––––––––––––––––––––––––
+  ITEM CONTROLS
+––––––––––––––––––––––––––– */
+
+.widget-controls {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  display: none;
+}
+
+.widget-close-btn {
+  width: 18px;
+  height: 18px;
+  background-color: var(--white-100);
+  border: none;
+  border-radius: 999px;
+  padding: 4px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.widget-close-btn svg {
+  margin-left: 1px;
+}
+
+/* Drag handle */
+.widget-drag-handle {
+  position: absolute;
+  bottom: 4px;
+  right: 4px;
+  width: 16px;
+  height: 16px;
+  cursor: move;
+  opacity: 0.3;
+  transition: opacity 0.2s;
+  fill: var(--content-dim-100);
+}
+
+.widget-drag-handle:hover {
+  opacity: 1;
+}
+
+/* –––––––––––––––––––––––––––
+  ANIMATIONS
+––––––––––––––––––––––––––– */
+
+/* Entry animation */
+.widget-enter {
+  animation: widgetEnter 0.5s ease-out;
+}
+
+@keyframes widgetEnter {
+  0% {
+    opacity: 0;
+    transform: scale(0.8) translate(var(--start-x, 0), var(--start-y, 0));
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) translate(var(--start-x, 0), var(--start-y, 0));
+  }
+}
+
+/* Exit animation */
+.widget-exit {
+  animation: widgetExit 0.3s ease-in forwards;
+}
+
+@keyframes widgetExit {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+}
+
+/* Hover animations */
+.widget:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
+.widget.dragging:hover {
+  transform: none; /* Override hover transform when dragging */
 }
